--- a/angular.json
+++ b/angular.json
@@ -3,66 +3,50 @@
   "version": 1,
   "cli": {
     "packageManager": "pnpm",
+    "schematicCollections": [
+      "@schematics/angular",
+      "ng-alain"
+    ],
     "analytics": false
+  },
+  "schematics": {
+    "@angular-eslint/schematics:application": {
+      "setParserOptionsProject": true
+    },
+    "@angular-eslint/schematics:library": {
+      "setParserOptionsProject": true
+    }
   },
   "newProjectRoot": "projects",
   "projects": {
     "notion-like-theme": {
       "projectType": "application",
+      "prefix": "app",
       "schematics": {
         "@schematics/angular:component": {
-          "skipTests": false,
-          "flat": false,
-          "inlineStyle": true,
-          "inlineTemplate": false,
+
           "style": "less"
         },
         "@schematics/angular:application": {
           "strict": true
-        },
-        "ng-alain:module": {
-          "routing": true,
-          "skipTests": false
-        },
-        "ng-alain:list": {
-          "skipTests": false
-        },
-        "ng-alain:edit": {
-          "skipTests": false,
-          "modal": true
-        },
-        "ng-alain:view": {
-          "skipTests": false,
-          "modal": true
-        },
-        "ng-alain:curd": {
-          "skipTests": false
-        },
-        "@schematics/angular:module": {
-          "routing": true,
-          "skipTests": false
-        },
-        "@schematics/angular:directive": {
-          "skipTests": false
-        },
-        "@schematics/angular:service": {
-          "skipTests": false
         }
+
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/notion-like-theme",
             "index": "src/index.html",
-            "main": "src/main.ts",
+            "browser": "src/main.ts",
+            "tsConfig": "tsconfig.app.json",
+
             "polyfills": [
               "zone.js"
             ],
-            "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "less",
 
             "assets": [
@@ -74,15 +58,14 @@
               "src/styles.less",
               "node_modules/vditor/src/assets/less/index.less"
             ],
-            "scripts": [
-              "node_modules/qrious/dist/qrious.min.js"
-            ],
+            "scripts": [],
             "allowedCommonJsDependencies": [
               "@antv/g2",
               "ajv",
+              "ajv-formats",
               "mockjs",
               "extend",
-              "ajv-formats",
+
               "date-fns",
               "file-saver"
             ],
@@ -90,39 +73,35 @@
               "includePaths": [
                 "node_modules/"
               ]
-            },
-            "serviceWorker": true,
-            "ngswConfigPath": "ngsw-config.json"
+            }
+
           },
           "configurations": {
             "production": {
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "8mb",
-                  "maximumError": "20mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "8kb",
-                  "maximumError": "16kb"
-                }
-              ],
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "6mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
             },
             "development": {
-              "buildOptimizer": false,
               "optimization": false,
-              "vendorChunk": true,
               "extractLicenses": false,
-              "sourceMap": true,
-              "namedChunks": true
+              "sourceMap": true
             }
           },
           "defaultConfiguration": "production"
@@ -131,22 +110,22 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "notion-like-theme:build:production"
+              "buildTarget": "notion-like-theme:build:production"
             },
             "development": {
-              "browserTarget": "notion-like-theme:build:development"
+              "buildTarget": "notion-like-theme:build:development"
             }
           },
           "defaultConfiguration": "development",
           "options": {
             "proxyConfig": "proxy.conf.js",
-            "disableHostCheck": true
+            "buildTarget": "ng-alain:build"
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "notion-like-theme:build"
+            "buildTarget": "notion-like-theme:build"
           }
         },
         "test": {
