--- a/package.json
+++ b/package.json
@@ -42,33 +42,32 @@
     "create-config": "ts-jest config:init"
   },
   "dependencies": {
-    "@angular/animations": "^17.2.1",
-    "@angular/common": "^17.2.1",
-    "@angular/compiler": "^17.2.1",
-    "@angular/core": "^17.2.1",
-    "@angular/forms": "^17.2.1",
-    "@angular/platform-browser": "^17.2.1",
-    "@angular/platform-browser-dynamic": "^17.2.1",
-    "@angular/router": "^17.2.1",
-    "@angular/service-worker": "^17.2.1",
+    "@angular/animations": "^18.1.1",
+    "@angular/common": "^18.1.1",
+    "@angular/compiler": "^18.1.1",
+    "@angular/core": "^18.1.1",
+    "@angular/forms": "^18.1.1",
+    "@angular/platform-browser": "^18.1.1",
+    "@angular/platform-browser-dynamic": "^18.1.1",
+    "@angular/router": "^18.1.1",
+    "@angular/service-worker": "^18.1.1",
     "@antv/g2": "^4.2.10",
     "@aomao/engine": "^2.9.26",
-    "@delon/abc": "^17.2.0",
-    "@delon/acl": "^17.2.0",
-    "@delon/auth": "^17.2.0",
-    "@delon/cache": "^17.2.0",
-    "@delon/chart": "^17.2.0",
-    "@delon/form": "^17.2.0",
-    "@delon/mock": "^17.2.0",
-    "@delon/theme": "^17.2.0",
-    "@delon/util": "^17.2.0",
+    "@delon/abc": "^18.0.2",
+    "@delon/acl": "^18.0.2",
+    "@delon/auth": "^18.0.2",
+    "@delon/cache": "^18.0.2",
+    "@delon/chart": "^18.0.2",
+    "@delon/form": "^18.0.2",
+    "@delon/mock": "^18.0.2",
+    "@delon/theme": "^18.0.2",
+    "@delon/util": "^18.0.2",
     "@ng-util/markdown": "^13.0.0",
     "@textbus/editor": "^2.1.6",
     "@types/mockjs": "^1.0.7",
     "ajv": "^8.8.2",
     "ajv-formats": "^2.1.1",
     "date-fns": "^2.28.0",
-
     "github-hyfree-sm-crypto": "0.3.12",
     "js-base64": "^3.7.2",
     "jsonc-parser": "3.0.0",
@@ -76,7 +75,7 @@
     "less": "4.1.3",
     "localforage": "^1.10.0",
     "mockjs": "^1.1.0",
-    "ng-zorro-antd": "^17.2.0",
+    "ng-zorro-antd": "^18.0.1",
     "ngx-tinymce": "^14.1.1",
     "ngx-ueditor": "^14.0.0",
     "qrious": "^4.0.2",
@@ -90,31 +89,31 @@
     "zone.js": "~0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.2.0",
-    "@angular-eslint/builder": "~17.2.1",
-    "@angular-eslint/eslint-plugin": "~17.2.1",
-    "@angular-eslint/eslint-plugin-template": "~17.2.1",
-    "@angular-eslint/schematics": "~17.2.1",
-    "@angular-eslint/template-parser": "~17.2.1",
-    "@angular/cli": "^17.2.0",
-    "@angular/compiler-cli": "^17.2.1",
-    "@angular/language-service": "^17.2.1",
-    "@delon/testing": "^17.2.0",
+    "@angular-devkit/build-angular": "^18.1.1",
+    "@angular-eslint/builder": "^18.0.1",
+    "@angular-eslint/eslint-plugin": "^18.0.0",
+    "@angular-eslint/eslint-plugin-template": "^18.0.0",
+    "@angular-eslint/schematics": "^18.0.0",
+    "@angular-eslint/template-parser": "^18.0.0",
+    "@angular/cli": "^18.1.1",
+    "@angular/compiler-cli": "^18.1.1",
+    "@angular/language-service": "^18.0.0",
+    "@delon/testing": "^18.0.2",
     "@types/jasmine": "^4.0.0",
     "@types/jasminewd2": "^2.0.10",
     "@types/jest": "^29.5.1",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "~6.1.0",
-    "@typescript-eslint/parser": "~6.1.0",
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "~8.8.0",
-    "eslint-plugin-deprecation": "~1.4.1",
-    "eslint-plugin-import": "~2.27.5",
-    "eslint-plugin-jsdoc": "~46.4.4",
-    "eslint-plugin-prefer-arrow": "~1.2.3",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "~9.1.0",
+    "eslint-plugin-deprecation": "^3.0.0",
+    "eslint-plugin-import": "~2.25.3",
+    "eslint-plugin-jsdoc": "~46.8.2",
+    "eslint-plugin-prefer-arrow": "~1.2.2",
     "eslint-plugin-prettier": "~5.0.0",
-    "husky": "^7.0.4",
+    "husky": "^9.0.11",
     "jasmine-core": "~4.3.0",
     "jasmine-spec-reporter": "^7.0.0",
     "jest": "^29.5.0",
@@ -124,10 +123,10 @@
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
     "lint-staged": "^12.1.4",
-    "ng-alain": "^17.2.0",
-    "ng-alain-plugin-theme": "^15.0.1",
+    "ng-alain": "^18.0.2",
+    "ng-alain-plugin-theme": "^18.0.0",
     "node-fetch": "^2.6.1",
-    "prettier": "^3.0.3",
+    "prettier": "^3.3.2",
     "protractor": "~7.0.0",
     "source-map-explorer": "^2.5.3",
     "stylelint": "^14.13.0",
@@ -137,7 +136,9 @@
     "stylelint-order": "^5.0.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.3.3"
+    "typescript": "~5.5.3",
+    "ngx-tinymce": "^18.0.0",
+    "@ng-util/monaco-editor": "^18.0.0"
   },
   "lint-staged": {
     "(src)/**/*.{html,ts}": [
